@@ -1,3 +1,15 @@
+2012-10-17  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Web Inspector: [Regression] SASS sources are not saved to disk.
+        https://bugs.webkit.org/show_bug.cgi?id=99551
+
+        Reviewed by Yury Semikhatsky.
+
+        Added resource null checks.
+
+        * inspector/front-end/StylesSourceMapping.js:
+        (WebInspector.StylesSourceMapping.prototype._uiSourceCodeAddedToWorkspace):
+
 2012-10-17  Elliott Sprehn  <esprehn@chromium.org>
 
         Clean up ContentData operator overloads
